--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
     <div class="container">
         <h1>UNDER CONSTRUCTION</h1>
-        <p>You are here early... stay here while we get a real website built. </p>
+        <p>You are here early... Stay here while we get a real website built. </p>
     </div>
 </body>
 </html>
