--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         }
 
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+       
         body {
             
             font-family: 'CustomFont', 'Arial', sans-serif;
