--- a/spyros-adventure.html
+++ b/spyros-adventure.html
@@ -50,8 +50,8 @@
 
 
 
-	<link rel="stylesheet" href="./Skylanders Spyro&#39;s Adventure - Official site_files/clientlibs-atvi-ui-plugins.css" type="text/css">
-<link rel="stylesheet" href="./Skylanders Spyro&#39;s Adventure - Official site_files/clientlibs-atvi-ui-main.css" type="text/css">
+	<link rel="stylesheet" href="https://web.archive.org/web/20160930202006cs_/https://www.skylanders.com/etc/designs/atvi-ui/clientlibs-atvi/clientlibs-atvi-ui-plugins.css" type="text/css">
+<link rel="stylesheet" href="https://web.archive.org/web/20160930202007cs_/https://www.skylanders.com/etc/designs/atvi-ui/clientlibs-atvi/clientlibs-atvi-ui-main.css" type="text/css">
 <script type="text/javascript" src="./Skylanders Spyro&#39;s Adventure - Official site_files/clientlibs-atvi-ui-plugins.js.download"></script>
 <script type="text/javascript" src="./Skylanders Spyro&#39;s Adventure - Official site_files/clientlibs-atvi-ui-main.js.download"></script>
 
