--- a/homepage.html
+++ b/homepage.html
@@ -18,11 +18,14 @@
     }
     *{box-sizing:border-box}
     body{
-      margin:0;
-      color:#eaf3ff;
-      min-height:100vh;
-      background: url("backgroundSSA.png") no-repeat center center fixed;
+      margin: 0;
+      color: #eaf3ff;
+      min-height: 100vh;
+      background-image: url("backgroundSSA.png");
+      background-repeat: no-repeat;
+      background-position: center center;
       background-size: cover;
+      background-attachment: fixed;
     }
     .container{max-width:var(--max-width);margin:0 auto;padding:24px}
 
@@ -33,10 +36,9 @@
     nav a{color:var(--muted);text-decoration:none;padding:8px 12px;border-radius:8px;font-weight:600}
     nav a:hover{background:var(--glass);color:var(--accent)}
 
-    /* HERO: frosted, darkened panel */
     .hero{display:grid;grid-template-columns:1fr 380px;gap:24px;align-items:center;margin-top:18px}
     .hero-card{
-      background: rgba(4,8,18,0.55); /* darker tint */
+      background: rgba(4,8,18,0.55); 
       border-radius:20px;
       padding:28px;
       box-shadow:0 12px 40px rgba(0,0,0,0.65);
@@ -51,7 +53,6 @@
     .hero-image{border-radius:16px;overflow:hidden;height:100%;box-shadow:0 20px 40px rgba(0,0,0,0.6)}
     .hero-image img{width:100%;height:100%;object-fit:cover;display:block}
 
-    /* GALLERY: frosted strip behind the cards */
     .gallery-section{
       margin-top:18px;
     }
