--- a/homepage.html
+++ b/homepage.html
@@ -122,7 +122,7 @@
         </div>
 
         <div class="hero-image" aria-hidden="true">
-          <img src="./Skylanders Spyro's Adventure Game - Official site_files/typeshit.png" alt="Skylanders header art">
+          <img src="Skylanders Spyro's Adventure Game - Official site_files\\PLACEHOLDER-PROJECT.png" alt="Skylanders header art">
         </div>
       </section>
 
