--- a/homepage.html
+++ b/homepage.html
@@ -145,8 +145,8 @@
 
             <article class="card">
               <img src="./Skylanders Spyro's Adventure Game - Official site_files/ssa3.jpg" alt="Spyro screenshot 3">
-              <h4>Battle!</h4>
-              <p>Use your elemental powers to defeat enemies!</p>
+              <h4>Complete puzzles!</h4>
+              <p>Use all of your knowledge to complete puzzles in this remaster!</p>
             </article>
 
           </div>
